--- a/css/style.css
+++ b/css/style.css
@@ -3,17 +3,19 @@
     padding: 0;
 }
 body{
+    position: absolute;
     box-sizing: border-box;
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 .iphone-branco-container{
     width: 100%;
     margin: 0 auto;
+    /* position: fixed; */
     /* border: 1px solid red; */
     display: flex;
-    height: 86vh;
+    height: 750px;
     justify-content: center;
     align-items: center;
 }
@@ -73,8 +75,10 @@ body{
     font-weight: bold;
 }
 .divlistafooter{
-    display: flex;
-    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
     width: 50%;
     margin: 0 auto;
     /* border: 1px solid green; */
