--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
     /* position: fixed; */
     /* border: 1px solid red; */
     display: flex;
-    height: 750px;
+    height: 800px;
     justify-content: center;
     align-items: center;
 }
@@ -76,7 +76,7 @@ body{
 }
 .divlistafooter{
     position: absolute;
-    bottom: 0;
+    /* bottom: 0; */
     left: 0;
     right: 0;
     width: 50%;
